# flexible-project

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/flexible-project/: .env  Cargo.toml
crates/flexible-project-core/: Cargo.toml  README.md
crates/flexible-project-core/src/: filter.rs  id.rs  lib.rs
crates/flexible-project-core/src/filter/: between.rs  between_eq.rs  contains.rs  cow.rs  eq.rs  ge.rs  gt.rs  helpers.rs  in.rs  le.rs  lt.rs  mod.rs  ne.rs  not.rs  not_between.rs  not_between_eq.rs  not_contains.rs  not_in.rs  regex.rs
crates/flexible-project-core/src/id/: filter.rs  gen.rs  mod.rs  model.rs
crates/flexible-project-core/src/model/: filter.rs  id.rs  mod.rs  node.rs  project.rs  stage.rs  task.rs  user.rs  workspace.rs
crates/flexible-project-core/src/use_case/: error.rs  hasher.rs  id.rs  mod.rs  node.rs  user.rs  verifier.rs  workspace.rs
crates/flexible-project-data/: Cargo.toml  README.md
crates/flexible-project-data/src/: error.rs  lib.rs
crates/flexible-project-data/src/data_source/: crud.rs  error.rs  mod.rs  user.rs
crates/flexible-project-data/src/data_source/local/: client.rs  error.rs  mod.rs  user.rs  utils.rs
crates/flexible-project-data/src/data_source/local/model/: id.rs  mod.rs  user.rs
crates/flexible-project-data/src/data_source/mock/: mod.rs  user.rs
crates/flexible-project-data/src/data_source/ops/: clear.rs  delete.rs  read.rs  save.rs
crates/flexible-project-data/src/interactor/: error.rs  hasher.rs  id.rs  mod.rs  node.rs  token.rs  user.rs  verifier.rs
crates/flexible-project-data/src/model/: id.rs  mod.rs  node.rs  user.rs
crates/flexible-project-data/src/repository/: crud.rs  error.rs  mod.rs  user.rs
crates/flexible-project-data/src/repository/mock/: mod.rs  user.rs
crates/flexible-project-data/src/repository/ops/: clear.rs  delete.rs  mod.rs  read.rs  save.rs
crates/flexible-project-filter/: Cargo.toml  README.md
crates/flexible-project-filter/src/: between.rs  between_eq.rs  contains.rs  cow.rs  eq.rs  ge.rs  gt.rs  in.rs  le.rs  lib.rs  lt.rs  ne.rs  not.rs  not_between.rs  not_between_eq.rs  not_contains.rs  not_in.rs  regex.rs
crates/flexible-project-gateway/: Cargo.toml  README.md
crates/flexible-project-gateway/src/: main.rs
crates/flexible-project-gateway/src/model/: methodology.rs  mod.rs  notification.rs  project.rs  user.rs  workspace.rs
crates/flexible-project-gateway/src/routes/: graphql.rs  health.rs  mod.rs
crates/flexible-project-gateway/src/schema/: mod.rs
crates/flexible-project-gateway/tests/: auth.rs  user.rs  workload.rs
crates/flexible-project-user/: .env  Cargo.toml  README.md
crates/flexible-project-user-data/: Cargo.toml  README.md
crates/flexible-project-user-data/src/: lib.rs
crates/flexible-project-user-data/src/client/: mod.rs
crates/flexible-project-user-data/src/model/: id.rs  mod.rs  role.rs  user.rs
crates/flexible-project-user-data/src/repository/: filter.rs  id.rs  mod.rs  user.rs
crates/flexible-project-user-domain/: Cargo.toml  README.md
crates/flexible-project-user-domain/src/: lib.rs  model.rs  use_case.rs
crates/flexible-project-user-domain/src/model/: avatar.rs  display_name.rs  email.rs  id.rs  mod.rs  name.rs  role.rs  user.rs
crates/flexible-project-user-domain/src/repository/: id.rs  mod.rs  user.rs
crates/flexible-project-user-domain/src/use_case/: create.rs  delete.rs  ext.rs  find_one.rs  mod.rs  read.rs  repository.rs  update.rs
crates/flexible-project-user-domain/src/use_case/update/: avatar.rs  display_name.rs  email.rs  mod.rs  name.rs  role.rs  user.rs
crates/flexible-project-user/src/: handle_request.rs  handle_result.rs  main.rs  setup.rs
crates/flexible-project-user/src/model/: avatar.rs  display_name.rs  email.rs  id.rs  mod.rs  name.rs  role.rs  user.rs
crates/flexible-project-user/src/model/filter/: between.rs  between_eq.rs  contains.rs  eq.rs  ge.rs  gt.rs  in.rs  le.rs  lt.rs  mod.rs  ne.rs  not.rs  not_between.rs  not_between_eq.rs  not_contains.rs  not_in.rs  regex.rs
crates/flexible-project-user/src/request/: mod.rs  update.rs
crates/flexible-project-workspace/: Cargo.toml  README.md
crates/flexible-project-workspace-data/: Cargo.toml  README.md
crates/flexible-project-workspace-data/src/: lib.rs
crates/flexible-project-workspace-domain/: Cargo.toml  README.md
crates/flexible-project-workspace-domain/src/: lib.rs
crates/flexible-project-workspace-domain/src/model/: description.rs  id.rs  member.rs  mod.rs  name.rs  project.rs  visibility.rs  workspace.rs
crates/flexible-project-workspace-domain/src/model/member/: id.rs  member.rs  mod.rs
crates/flexible-project-workspace-domain/src/model/role/: access.rs  id.rs  impls.rs  mod.rs  name.rs  role.rs
crates/flexible-project-workspace-domain/src/model/role/access/: level.rs  mod.rs  operation.rs  scope.rs
crates/flexible-project-workspace-domain/src/repository/: mod.rs
crates/flexible-project-workspace-domain/src/use_case/: mod.rs
crates/flexible-project-workspace/src/: main.rs
crates/flexible-project/src/: lib.rs  main.rs  routes.rs
crates/flexible-project/src/config/: graphql.rs  mod.rs  user.rs
crates/flexible-project/src/data/: mod.rs  user.rs
crates/flexible-project/src/model/: id.rs  mod.rs  node.rs  user.rs
crates/flexible-project/src/route/: graphql.rs  mod.rs
crates/flexible-project/src/schema/: ext.rs  mod.rs  node.rs  user.rs
crates/flexible-project/src/schema/di/: mod.rs
crates/flexible-project/src/schema/di/data_source/: client.rs  mod.rs  user.rs
crates/flexible-project/src/schema/di/interactor/: hasher.rs  id.rs  mod.rs  node.rs  token.rs  user.rs  (+1 more)
flexible-project/: Cargo.toml
flexible-project-data/: Cargo.toml
flexible-project-data/src/: lib.rs
flexible-project-data/src/data_source/: crud.rs  mod.rs
flexible-project-data/src/data_source/mock/: user.rs
flexible-project-data/src/data_source/ops/: clear.rs  delete.rs  mod.rs  read.rs
flexible-project-data/src/model/: id.rs  mod.rs  user.rs
flexible-project-data/src/repository/: mod.rs
flexible-project/src/: main.rs
(+7 files in other folders)
