[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/tuguzT/flexible-project"

[workspace.dependencies]
# local crates (domain and data layers, various helpers, utilities, etc.)
fp-core = { package = "flexible-project-core", path = "crates/flexible-project-core" }
fp-filter = { package = "flexible-project-filter", path = "crates/flexible-project-filter" }
fp-user-domain = { package = "flexible-project-user-domain", path = "crates/flexible-project-user-domain" }
fp-user-data = { package = "flexible-project-user-data", path = "crates/flexible-project-user-data" }
fp-workspace-domain = { package = "flexible-project-workspace-domain", path = "crates/flexible-project-workspace-domain" }
fp-workspace-data = { package = "flexible-project-workspace-data", path = "crates/flexible-project-workspace-data" }
# external crates (macros, databases, serialization, etc.)
typed-builder = "0.14.0"
derive_more = "0.99.17"
auto_impl = "1.1.0"
async-trait = "0.1.68"
futures = "0.3.28"
fancy-regex = "0.11.0"
once_cell = "1.17.1"
email_address = { version = "0.2.4", default-features = false }
indexmap = "1.9.3"
serde = "1.0.163"
mongodb = "2.5.0"
chrono = "0.4.24"
axum = "0.6.18"
tower-http = "0.4.0"
tokio = "1.28.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-graphql = "5.0.8"
async-graphql-axum = "5.0.8"
anyhow = "1.0.71"
reqwest = "0.11.17"
