[package]
name = "flexible-project"
version = "0.0.0"
description = "Flexible Project server"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
fp-core = { path = "../flexible-project-core", package = "flexible-project-core", version = "0.0.0" }
fp-data = { path = "../flexible-project-data", package = "flexible-project-data", version = "0.0.0" }
actix-web = "4.1.0"
tokio = { version = "1.21.0", features = ["full"] }
