[package]
name = "flexible-project-core"
version = "0.0.0"
description = "Flexible Project backend core library"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
fancy-regex = "0.11.0"
typed-builder = "0.14.0"
