[package]
name = "flexible-project-core"
description = "Flexible Project backend core library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
derive_more = "0.99.17"
fancy-regex = "0.11.0"
typed-builder = "0.14.0"
