[package]
name = "flexible-project-core"
description = "Flexible Project backend core library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true }
fancy-regex = { workspace = true }
typed-builder = { workspace = true }
