[package]
name = "flexible-project-data"
version = "0.0.0"
description = "Flexible Project data layer library"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
fp-core = { path = "../flexible-project-core", package = "flexible-project-core", version = "0.0.0" }
async-trait = "0.1.57"
tokio = { version = "1.21.1", features = ["sync"] }
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
fancy-regex = "0.10.0"
once_cell = "1.15.0"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
