[package]
name = "flexible-project-data"
version = "0.0.0"
description = "Flexible Project data layer library"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
# Flexible Project layer libraries
fp-core = { path = "../flexible-project-core", package = "flexible-project-core", version = "0.0.0" }
# Tokio runtime
tokio = { version = "1.23.0", features = ["sync"] }
# Serialization & deserialization
serde = { version = "1.0.149", features = ["derive"] }
# Password hashing
argon2 = { version = "0.4.1", features = ["std"] }
rand_core = { version = "0.6.4", features = ["std"] }
# JWT
jsonwebtoken = "8.2.0"
# Database
mongodb = "2.3.1"
# Mocking
mockall = "0.11.3"
# Miscellaneous
async-trait = "0.1.59"
futures = "0.3.25"
ouroboros = "0.15.5"
derive_more = "0.99.17"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
fancy-regex = "0.10.0"
once_cell = "1.16.0"
tracing = "0.1.37"
chrono = { version = "0.4.23", features = ["serde"] }
