[package]
name = "flexible-project-filter"
description = "Flexible Project backend general filtering library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fancy-regex = { workspace = true }
auto_impl = { workspace = true }
