[package]
name = "flexible-project-gateway"
description = "Flexible Project backend API Gateway microservice binary"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true, features = ["tracing"] }
async-graphql-axum = { workspace = true }
anyhow = { workspace = true }
