[package]
name = "flexible-project-user-data"
version = "0.0.0"
description = "Flexible Project backend user microservice data layer library"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
domain = { package = "flexible-project-user-domain", path = "../flexible-project-user-domain" }
async-trait = "0.1.67"
derive_more = "0.99.17"
futures = "0.3.27"
serde = "1.0.158"
mongodb = { version = "2.4.0", features = ["bson-uuid-1"] }
