[package]
name = "flexible-project-user-data"
description = "Flexible Project backend user microservice data layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
domain = { package = "flexible-project-user-domain", path = "../flexible-project-user-domain" }
async-trait = "0.1.67"
derive_more = "0.99.17"
futures = "0.3.27"
serde = "1.0.158"
mongodb = { version = "2.4.0", features = ["bson-uuid-1"] }
