[package]
name = "flexible-project-user-data"
description = "Flexible Project backend user microservice data layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-core = { workspace = true }
fp-filter = { workspace = true }
fp-user-domain = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
mongodb = { workspace = true, features = ["bson-uuid-1"] }
