[package]
name = "flexible-project-user-domain"
description = "Flexible Project backend user microservice domain layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-core = { package = "flexible-project-core", path = "../flexible-project-core" }
async-trait = "0.1.67"
auto_impl = "1.0.1"
derive_more = "0.99.17"
once_cell = "1.17.1"
fancy-regex = "0.11.0"
typed-builder = "0.14.0"
futures = "0.3.27"
