[package]
name = "flexible-project-user-domain"
description = "Flexible Project backend user microservice domain layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-core = { package = "flexible-project-core", path = "../flexible-project-core" }
async-trait = { workspace = true }
auto_impl = { workspace = true }
derive_more = { workspace = true }
fancy-regex = { workspace = true }
typed-builder = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
