[package]
name = "flexible-project-user"
description = "Flexible Project backend user microservice binary"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-user-domain = { workspace = true }
fp-user-data = { workspace = true }
