[package]
name = "flexible-project-user"
description = "Flexible Project backend user microservice binary"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-user-domain = { workspace = true }
fp-user-data = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
