[package]
name = "flexible-project-workspace-data"
description = "Flexible Project backend workspace microservice data layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-workspace-domain = { workspace = true }
