[package]
name = "flexible-project-workspace-domain"
description = "Flexible Project backend workspace microservice domain layer library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fp-core = { workspace = true }
fp-user-domain = { workspace = true }
typed-builder = { workspace = true }
derive_more = { workspace = true }
fancy-regex = { workspace = true }
once_cell = { workspace = true }
