[package]
name = "flexible-project-workspace"
version = "0.0.0"
description = "Flexible Project workspace backend microservice binary"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
