[package]
name = "flexible-project"
version = "0.0.0"
description = "Flexible Project server"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
# Flexible Project layer libraries
fp-core = { path = "../flexible-project-core", package = "flexible-project-core", version = "0.0.0" }
fp-data = { path = "../flexible-project-data", package = "flexible-project-data", version = "0.0.0" }
# Actix project
actix-web = "4.2.1"
actix-web-lab = "0.18.5"
actix-cors = "0.6.3"
# GraphQL
async-graphql = { version = "4.0.15", features = ["log", "uuid"] }
async-graphql-actix-web = "4.0.15"
# Tokio runtime
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync"] }
# Miscellaneous
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
derive_more = "0.99.17"
anyhow = "1.0.65"
log-panics = "2.1.0"
