[package]
name = "flexible-project"
version = "0.0.0"
description = "Flexible Project server"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/tuguzT/flexible-project"
edition = "2021"

[dependencies]
# Flexible Project layer libraries
fp-core = { path = "../flexible-project-core", package = "flexible-project-core", version = "0.0.0" }
fp-data = { path = "../flexible-project-data", package = "flexible-project-data", version = "0.0.0" }
# Axum project
axum = "0.6.1"
tower-http = { version = "0.3.5", features = ["trace"] }
# GraphQL
async-graphql = { version = "5.0.3", features = ["tracing", "uuid"] }
async-graphql-axum = "5.0.3"
# Tokio runtime
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync", "signal"] }
# Dependency injection
shaku = "0.6.1"
# Miscellaneous
dotenv = "0.15.0"
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
derive_more = "0.99.17"
anyhow = "1.0.66"
